--- a/Project.Rmd
+++ b/Project.Rmd
@@ -282,17 +282,17 @@ ggplot(tfxr[-15,], aes(x=Year, y=`Total Foreign Exchange Reserves`)) + geom_poin
 
 x <- 2*(row_vec-x_bar)
 xY <- x * nepal_tourism[,3]
-tfxr <- cbind(row_vec, nepal_tourism[,c(1,3)], x, xY, x^2)
-tfxr <- rbind(tfxr, colSums(tfxr))
-#xtable(tfxr)
-kable(tfxr, col.names = c("SN.", "Year ($X$)", "Tourist Arrival ($Y$)", "$x = 2(X - \\overline{X})$", "$xY$", "$x^2$"))
+ta <- cbind(row_vec, nepal_tourism[,c(1,3)], x, xY, x^2)
+ta <- rbind(ta, colSums(ta))
+#xtable(ta)
+kable(ta, col.names = c("SN.", "Year ($X$)", "Tourist Arrival ($Y$)", "$x = 2(X - \\overline{X})$", "$xY$", "$x^2$"))
 
 ```
 
 
 ```{r, fig.width=5, fig.height=3, fig.cap="Tourist Arrival augmented with LOESS regression curve with 95% confidence interval range", results='asis', echo=FALSE}
 
-ggplot(tfxr[-15,], aes(x=Year, y=`Tourist Arrival`)) + geom_point() + geom_line(aes(y=`Tourist Arrival`)) + xlab("Year") + ylab("Tourist Arrival \n (in Thousands)") + theme_light() + theme(legend.position="top", text = element_text(size=8)) + stat_smooth() + scale_y_continuous(labels = function(x)x/1000)
+ggplot(ta[-15,], aes(x=Year, y=`Tourist Arrival`)) + geom_point() + geom_line(aes(y=`Tourist Arrival`)) + xlab("Year") + ylab("Tourist Arrival \n (in Thousands)") + theme_light() + theme(legend.position="top", text = element_text(size=8)) + stat_smooth() + scale_y_continuous(labels = function(x)x/1000)
 ```
 
 ## Trend Line
@@ -304,19 +304,19 @@ ggplot(tfxr[-15,], aes(x=Year, y=`Tourist Arrival`)) + geom_point() + geom_line(
     $\widehat{Y} = b_0 + b_1X$  
       where   
     ```{r, echo=FALSE}
-    b_1 <- tfxr[15,5]/tfxr[15,6]
-    b_0 <- tfxr[15,3]/n
+    b_1 <- ta[15,5]/ta[15,6]
+    b_0 <- ta[15,3]/n
     ```
-      $b_1 = \frac{\sum xY}{\sum x^2}$ = $\frac{`r tfxr[15,5]`}{`r tfxr[15,6]`}$ = `r b_1`
+      $b_1 = \frac{\sum xY}{\sum x^2}$ = $\frac{`r ta[15,5]`}{`r ta[15,6]`}$ = `r b_1`
       
-      $b_0 = \frac{\sum Y}{n}$ = $\frac{`r tfxr[15,3]`}{`r n`}$ = `r b_0`  
+      $b_0 = \frac{\sum Y}{n}$ = $\frac{`r ta[15,3]`}{`r n`}$ = `r b_0`  
       
       
     So, $\widehat{Y} = b_0 + b_1X = `r b_0` + `r b_1`x$
     
 ```{r, fig.width=5, fig.height=3, fig.cap="Linear trend line of Tourist Arrival with 95% confidence interval range" , results='asis', echo=FALSE}
 
-ggplot(tfxr[-15,], aes(x=Year, y=`Tourist Arrival`)) + geom_point() + geom_line(aes(y=`Tourist Arrival`), color="#555555") + xlab("Year") + ylab("Tourist Arrival \n (in Thousands)") + theme_light() + theme(legend.position="top", text = element_text(size=8))  + stat_function(fun = function(x) {b_0 + b_1 * 2 * (x - 2001 - x_bar)}, size=1) + scale_y_continuous(labels = function(x)x/1000) + geom_smooth(method = "lm", color="black")
+ggplot(ta[-15,], aes(x=Year, y=`Tourist Arrival`)) + geom_point() + geom_line(aes(y=`Tourist Arrival`), color="#555555") + xlab("Year") + ylab("Tourist Arrival \n (in Thousands)") + theme_light() + theme(legend.position="top", text = element_text(size=8))  + stat_function(fun = function(x) {b_0 + b_1 * 2 * (x - 2001 - x_bar)}, size=1) + scale_y_continuous(labels = function(x)x/1000) + geom_smooth(method = "lm", color="black")
 ```
   
 
@@ -343,11 +343,11 @@ ggplot(tfxr[-15,], aes(x=Year, y=`Tourist Arrival`)) + geom_point() + geom_line(
     baseline = 0
     
 ```{r, echo=FALSE}
-y_hat <- b_0 + b_1 * tfxr[1:14, 4]
-perTrend <- tfxr[1:14,3] / y_hat * 100
-relCyc <- (tfxr[1:14,3] - y_hat) / y_hat * 100
-tfxr <- cbind(tfxr[1:14, c(2, 3, 4)], y_hat, perTrend, relCyc)
-kable(tfxr, col.names = c("Year ($X$)", "Tourist Arrival ($Y$)", "$x$", "$\\widehat{Y}$", "$\\frac{Y}{\\widehat{Y}} \\times 100$", "$\\frac{Y - \\widehat{Y}}{\\widehat{Y}} \\times 100$"))
+y_hat <- b_0 + b_1 * ta[1:14, 4]
+perTrend <- ta[1:14,3] / y_hat * 100
+relCyc <- (ta[1:14,3] - y_hat) / y_hat * 100
+ta <- cbind(ta[1:14, c(2, 3, 4)], y_hat, perTrend, relCyc)
+kable(ta, col.names = c("Year ($X$)", "Tourist Arrival ($Y$)", "$x$", "$\\widehat{Y}$", "$\\frac{Y}{\\widehat{Y}} \\times 100$", "$\\frac{Y - \\widehat{Y}}{\\widehat{Y}} \\times 100$"))
 
 ```
 
@@ -356,7 +356,7 @@ For both measure of variaton, the highest fluctuation occured in the year 2015 w
 
 ```{r, fig.width=5, fig.height=3, fig.cap="Percent of trend around the trend line for Tourist Arrival", results='asis', echo=FALSE}
 
-ggplot(tfxr[-15,], aes(x=Year, y=perTrend)) + geom_point() + geom_line(aes(y=`perTrend`)) + xlab("Year") + ylab("Percent of trend") + theme_light() + theme(legend.position="top", text = element_text(size=8)) + stat_function(fun = function(x) {x = 100}, linetype="dashed") + scale_y_continuous(breaks=seq(60, 130, by=10))
+ggplot(ta[-15,], aes(x=Year, y=perTrend)) + geom_point() + geom_line(aes(y=`perTrend`)) + xlab("Year") + ylab("Percent of trend") + theme_light() + theme(legend.position="top", text = element_text(size=8)) + stat_function(fun = function(x) {x = 100}, linetype="dashed") + scale_y_continuous(breaks=seq(60, 130, by=10))
 ```
 
 
@@ -400,7 +400,7 @@ ggplot(tfxr[-15,], aes(x=Year, y=perTrend)) + geom_point() + geom_line(aes(y=`pe
 prediction <- data.frame(cbind(c(2016,2017,2018), c(p2016, p2017, p2018)))
 colnames(prediction) <- c('Year', 'Tourist Arrival')
 
-ggplot(tfxr[-15,], aes(x=Year, y=`Tourist Arrival`)) + geom_point(shape=23) + geom_line(aes(y=`Tourist Arrival`), color="#555555") + xlab("Year") + ylab("Tourist Arrival \n (in Thousands)") + theme_light() + theme(legend.position="top", text = element_text(size=8))  + stat_function(fun = function(x) {b_0 + b_1 * 2 * (x - 2001 - x_bar)}, size=1) + scale_y_continuous(labels = function(x)x/1000) + geom_smooth(method = "lm", color="black", se=FALSE) + geom_point(data = prediction, size=2, aes(shape = factor(Year, labels = c(paste("2016 : ", p2016), paste("2017 : ", p2017), paste("2018 : ", p2018))))) + labs(shape="")
+ggplot(ta[-15,], aes(x=Year, y=`Tourist Arrival`)) + geom_point(shape=23) + geom_line(aes(y=`Tourist Arrival`), color="#555555") + xlab("Year") + ylab("Tourist Arrival \n (in Thousands)") + theme_light() + theme(legend.position="top", text = element_text(size=8))  + stat_function(fun = function(x) {b_0 + b_1 * 2 * (x - 2001 - x_bar)}, size=1) + scale_y_continuous(labels = function(x)x/1000) + geom_smooth(method = "lm", color="black", se=FALSE) + geom_point(data = prediction, size=2, aes(shape = factor(Year, labels = c(paste("2016 : ", p2016), paste("2017 : ", p2017), paste("2018 : ", p2018))))) + labs(shape="")
 ```
 
 
@@ -411,17 +411,17 @@ ggplot(tfxr[-15,], aes(x=Year, y=`Tourist Arrival`)) + geom_point(shape=23) + ge
 
 x <- 2*(row_vec-x_bar)
 xY <- x * nepal_tourism[,4]
-tfxr <- cbind(row_vec, nepal_tourism[,c(1,4)], x, xY, x^2)
-tfxr <- rbind(tfxr, colSums(tfxr))
-#xtable(tfxr)
-kable(tfxr, col.names = c("SN.", "Year ($X$)", "GFXE ($Y$)", "$x = 2(X - \\overline{X})$", "$xY$", "$x^2$"), digits = 2)
+gfxe <- cbind(row_vec, nepal_tourism[,c(1,4)], x, xY, x^2)
+gfxe <- rbind(gfxe, colSums(gfxe))
+#xtable(gfxe)
+kable(gfxe, col.names = c("SN.", "Year ($X$)", "GFXE ($Y$)", "$x = 2(X - \\overline{X})$", "$xY$", "$x^2$"), digits = 2)
 
 ```
 
 
 ```{r , fig.width=5, fig.height=3, fig.cap="Gross Foreign Exchange Earnings From Tourism augmented with LOESS regression curve with 95% confidence interval range", results='asis', echo=FALSE}
 
-ggplot(tfxr[-15,], aes(x=Year, y=`Gross Foreign Exchange Earnings From Tourism`)) + geom_point() + geom_line(aes(y=`Gross Foreign Exchange Earnings From Tourism`)) + xlab("Year") + ylab("Gross Foreign Exchange Earnings From Tourism \n (in Billions Rs.)") + theme_light() + theme(legend.position="top", text = element_text(size=8)) + scale_y_continuous(labels = function(x)x/1000) + stat_smooth()
+ggplot(gfxe[-15,], aes(x=Year, y=`Gross Foreign Exchange Earnings From Tourism`)) + geom_point() + geom_line(aes(y=`Gross Foreign Exchange Earnings From Tourism`)) + xlab("Year") + ylab("Gross Foreign Exchange Earnings From Tourism \n (in Billions Rs.)") + theme_light() + theme(legend.position="top", text = element_text(size=8)) + scale_y_continuous(labels = function(x)x/1000) + stat_smooth()
 ```
 
 ## Trend Line
@@ -433,19 +433,19 @@ ggplot(tfxr[-15,], aes(x=Year, y=`Gross Foreign Exchange Earnings From Tourism`)
     $\widehat{Y} = b_0 + b_1X$  
       where   
     ```{r, echo=FALSE}
-        b_1 <- tfxr[15,5]/tfxr[15,6]
-        b_0 <- tfxr[15,3]/n
+        b_1 <- gfxe[15,5]/gfxe[15,6]
+        b_0 <- gfxe[15,3]/n
     ```
-      $b_1 = \frac{\sum xY}{\sum x^2}$ = $\frac{`r tfxr[15,5]`}{`r tfxr[15,6]`}$ = `r b_1`
+      $b_1 = \frac{\sum xY}{\sum x^2}$ = $\frac{`r gfxe[15,5]`}{`r gfxe[15,6]`}$ = `r b_1`
       
-      $b_0 = \frac{\sum Y}{n}$ = $\frac{`r tfxr[15,3]`}{`r n`}$ = `r b_0`  
+      $b_0 = \frac{\sum Y}{n}$ = $\frac{`r gfxe[15,3]`}{`r n`}$ = `r b_0`  
       
       
     So, $\widehat{Y} = b_0 + b_1X = `r b_0` + `r b_1`x$
   
 ```{r , fig.width=5, fig.height=3, fig.cap="Linear trend line of Gross Foreign Exchange Earnings From Tourism with 95% confidence interval range" , results='asis', echo=FALSE}
 
-ggplot(tfxr[-15,], aes(x=Year, y=`Gross Foreign Exchange Earnings From Tourism`)) + geom_point() + geom_line(aes(y=`Gross Foreign Exchange Earnings From Tourism`), color="#555555") + xlab("Year") + ylab("Gross Foreign Exchange Earnings From Tourism \n (in Billions Rs.)") + theme_light() + theme(legend.position="top", text = element_text(size=8)) + scale_y_continuous(labels = function(x)x/1000)  + stat_function(fun = function(x) {b_0 + b_1 * 2 * (x - 2001 - x_bar)}, size=1) + geom_smooth(method = "lm", color="black")
+ggplot(gfxe[-15,], aes(x=Year, y=`Gross Foreign Exchange Earnings From Tourism`)) + geom_point() + geom_line(aes(y=`Gross Foreign Exchange Earnings From Tourism`), color="#555555") + xlab("Year") + ylab("Gross Foreign Exchange Earnings From Tourism \n (in Billions Rs.)") + theme_light() + theme(legend.position="top", text = element_text(size=8)) + scale_y_continuous(labels = function(x)x/1000)  + stat_function(fun = function(x) {b_0 + b_1 * 2 * (x - 2001 - x_bar)}, size=1) + geom_smooth(method = "lm", color="black")
 ```
 
 ## Cyclical Variation 
@@ -471,11 +471,11 @@ ggplot(tfxr[-15,], aes(x=Year, y=`Gross Foreign Exchange Earnings From Tourism`)
     baseline = 0
     
 ```{r, echo=FALSE}
-y_hat <- b_0 + b_1 * tfxr[1:14, 4]
-perTrend <- tfxr[1:14,3] / y_hat * 100
-relCyc <- (tfxr[1:14,3] - y_hat) / y_hat * 100
-tfxr <- cbind(tfxr[1:14, c(2, 3, 4)], y_hat, perTrend, relCyc)
-kable(tfxr, col.names = c("Year ($X$)", "GFXE ($Y$)", "$x$", "$\\widehat{Y}$", "$\\frac{Y}{\\widehat{Y}} \\times 100$", "$\\frac{Y - \\widehat{Y}}{\\widehat{Y}} \\times 100$"))
+y_hat <- b_0 + b_1 * gfxe[1:14, 4]
+perTrend <- gfxe[1:14,3] / y_hat * 100
+relCyc <- (gfxe[1:14,3] - y_hat) / y_hat * 100
+gfxe <- cbind(gfxe[1:14, c(2, 3, 4)], y_hat, perTrend, relCyc)
+kable(gfxe, col.names = c("Year ($X$)", "GFXE ($Y$)", "$x$", "$\\widehat{Y}$", "$\\frac{Y}{\\widehat{Y}} \\times 100$", "$\\frac{Y - \\widehat{Y}}{\\widehat{Y}} \\times 100$"))
 
 ```
 
@@ -484,7 +484,7 @@ For both measure of variaton, the highest fluctuation occured in the year 2002 w
 
 ```{r, fig.width=5, fig.height=3, fig.cap="Percent of trend around the trend line for Gross Foreign Exchange Earnings From Tourism", results='asis', echo=FALSE}
 
-ggplot(tfxr[-15,], aes(x=Year, y=perTrend)) + geom_point() + geom_line(aes(y=`perTrend`)) + xlab("Year") + ylab("Percent of trend") + theme_light() + theme(legend.position="top", text = element_text(size=8)) + stat_function(fun = function(x) {x = 100}, linetype="dashed") + scale_y_continuous(breaks=seq(60, 220, by=20))
+ggplot(gfxe[-15,], aes(x=Year, y=perTrend)) + geom_point() + geom_line(aes(y=`perTrend`)) + xlab("Year") + ylab("Percent of trend") + theme_light() + theme(legend.position="top", text = element_text(size=8)) + stat_function(fun = function(x) {x = 100}, linetype="dashed") + scale_y_continuous(breaks=seq(60, 220, by=20))
 ```
 
 
@@ -527,7 +527,7 @@ ggplot(tfxr[-15,], aes(x=Year, y=perTrend)) + geom_point() + geom_line(aes(y=`pe
 prediction <- data.frame(cbind(c(2016,2017,2018), c(p2016, p2017, p2018)))
 colnames(prediction) <- c('Year', 'Gross Foreign Exchange Earnings From Tourism')
 
-ggplot(tfxr[-15,], aes(x=Year, y=`Gross Foreign Exchange Earnings From Tourism`)) + geom_point(shape=23) + geom_line(aes(y=`Gross Foreign Exchange Earnings From Tourism`), color="#555555") + xlab("Year") + ylab("Gross Foreign Exchange Earnings From Tourism \n (in Billions Rs.)") + theme_light() + theme(legend.position="top", text = element_text(size=8)) + scale_y_continuous(labels = function(x)x/1000)  + stat_function(fun = function(x) {b_0 + b_1 * 2 * (x - 2001 - x_bar)}, size=1) + geom_smooth(method = "lm", color="black", se=FALSE) + geom_point(data = prediction, size=2, aes(shape = factor(Year, labels = c(paste("2016 : Rs.", round(p2016, digits=2), "million"), paste("2017 : Rs.", round(p2017, digits=2), "million"), paste("2018 : Rs.", round(p2018, digits=2), "million"))))) + labs(shape="")
+ggplot(gfxe[-15,], aes(x=Year, y=`Gross Foreign Exchange Earnings From Tourism`)) + geom_point(shape=23) + geom_line(aes(y=`Gross Foreign Exchange Earnings From Tourism`), color="#555555") + xlab("Year") + ylab("Gross Foreign Exchange Earnings From Tourism \n (in Billions Rs.)") + theme_light() + theme(legend.position="top", text = element_text(size=8)) + scale_y_continuous(labels = function(x)x/1000)  + stat_function(fun = function(x) {b_0 + b_1 * 2 * (x - 2001 - x_bar)}, size=1) + geom_smooth(method = "lm", color="black", se=FALSE) + geom_point(data = prediction, size=2, aes(shape = factor(Year, labels = c(paste("2016 : Rs.", round(p2016, digits=2), "million"), paste("2017 : Rs.", round(p2017, digits=2), "million"), paste("2018 : Rs.", round(p2018, digits=2), "million"))))) + labs(shape="")
 ```
 
 
@@ -539,17 +539,17 @@ ggplot(tfxr[-15,], aes(x=Year, y=`Gross Foreign Exchange Earnings From Tourism`)
 
 x <- 2*(row_vec-x_bar)
 xY <- x * nepal_tourism[,5]
-tfxr <- cbind(row_vec, nepal_tourism[,c(1,5)], x, xY, x^2)
-tfxr <- rbind(tfxr, colSums(tfxr))
-#xtable(tfxr)
-kable(tfxr, col.names = c("SN.", "Year ($X$)", "ALS ($Y$)", "$x = 2(X - \\overline{X})$", "$xY$", "$x^2$"))
+als <- cbind(row_vec, nepal_tourism[,c(1,5)], x, xY, x^2)
+als <- rbind(als, colSums(als))
+#xtable(als)
+kable(als, col.names = c("SN.", "Year ($X$)", "ALS ($Y$)", "$x = 2(X - \\overline{X})$", "$xY$", "$x^2$"))
 
 ```
 
 
 ```{r, fig.width=5, fig.height=3, fig.cap="Average Length of Stay augmented with LOESS regression curve with 95% confidence interval range", results='asis', echo=FALSE}
 
-ggplot(tfxr[-15,], aes(x=Year, y=`Average Length of Stay`)) + geom_point() + geom_line(aes(y=`Average Length of Stay`)) + xlab("Year") + ylab("Average Length of Stay \n (in Days)") + theme_light() + theme(legend.position="top", text = element_text(size=8)) + stat_smooth()
+ggplot(als[-15,], aes(x=Year, y=`Average Length of Stay`)) + geom_point() + geom_line(aes(y=`Average Length of Stay`)) + xlab("Year") + ylab("Average Length of Stay \n (in Days)") + theme_light() + theme(legend.position="top", text = element_text(size=8)) + stat_smooth()
 ```
 
 ## Trend Line
@@ -561,19 +561,19 @@ ggplot(tfxr[-15,], aes(x=Year, y=`Average Length of Stay`)) + geom_point() + geo
     $\widehat{Y} = b_0 + b_1X$  
       where   
     ```{r, echo=FALSE}
-    b_1 <- tfxr[15,5]/tfxr[15,6]
-    b_0 <- tfxr[15,3]/n
+    b_1 <- als[15,5]/als[15,6]
+    b_0 <- als[15,3]/n
     ```
-      $b_1 = \frac{\sum xY}{\sum x^2}$ = $\frac{`r tfxr[15,5]`}{`r tfxr[15,6]`}$ = `r b_1`
+      $b_1 = \frac{\sum xY}{\sum x^2}$ = $\frac{`r als[15,5]`}{`r als[15,6]`}$ = `r b_1`
       
-      $b_0 = \frac{\sum Y}{n}$ = $\frac{`r tfxr[15,3]`}{`r n`}$ = `r b_0`  
+      $b_0 = \frac{\sum Y}{n}$ = $\frac{`r als[15,3]`}{`r n`}$ = `r b_0`  
       
       
     So, $\widehat{Y} = b_0 + b_1X = `r b_0` + `r b_1`x$
   
 ```{r, fig.width=5, fig.height=3, fig.cap="Linear trend line of Average Length of Stay with 95% confidence interval range" , results='asis', echo=FALSE}
 
-ggplot(tfxr[-15,], aes(x=Year, y=`Average Length of Stay`)) + geom_point() + geom_line(aes(y=`Average Length of Stay`), color="#555555") + xlab("Year") + ylab("Average Length of Stay \n (in Days)") + theme_light() + theme(legend.position="top", text = element_text(size=8)) + stat_function(fun = function(x) {b_0 + b_1 * 2 * (x - 2001 - x_bar)}, size=1) + geom_smooth(method = "lm", color="black")
+ggplot(als[-15,], aes(x=Year, y=`Average Length of Stay`)) + geom_point() + geom_line(aes(y=`Average Length of Stay`), color="#555555") + xlab("Year") + ylab("Average Length of Stay \n (in Days)") + theme_light() + theme(legend.position="top", text = element_text(size=8)) + stat_function(fun = function(x) {b_0 + b_1 * 2 * (x - 2001 - x_bar)}, size=1) + geom_smooth(method = "lm", color="black")
 ```
 
 ## Cyclical Variation 
@@ -599,11 +599,11 @@ ggplot(tfxr[-15,], aes(x=Year, y=`Average Length of Stay`)) + geom_point() + geo
     baseline = 0
     
 ```{r, echo=FALSE}
-y_hat <- b_0 + b_1 * tfxr[1:14, 4]
-perTrend <- tfxr[1:14,3] / y_hat * 100
-relCyc <- (tfxr[1:14,3] - y_hat) / y_hat * 100
-tfxr <- cbind(tfxr[1:14, c(2, 3, 4)], y_hat, perTrend, relCyc)
-kable(tfxr, col.names = c("Year ($X$)", "ALS ($Y$)", "$x$", "$\\widehat{Y}$", "$\\frac{Y}{\\widehat{Y}} \\times 100$", "$\\frac{Y - \\widehat{Y}}{\\widehat{Y}} \\times 100$"))
+y_hat <- b_0 + b_1 * als[1:14, 4]
+perTrend <- als[1:14,3] / y_hat * 100
+relCyc <- (als[1:14,3] - y_hat) / y_hat * 100
+als <- cbind(als[1:14, c(2, 3, 4)], y_hat, perTrend, relCyc)
+kable(als, col.names = c("Year ($X$)", "ALS ($Y$)", "$x$", "$\\widehat{Y}$", "$\\frac{Y}{\\widehat{Y}} \\times 100$", "$\\frac{Y - \\widehat{Y}}{\\widehat{Y}} \\times 100$"))
 
 ```
 
@@ -612,7 +612,7 @@ For both measure of variaton, the highest fluctuation occured in the year 2004 w
 
 ```{r, fig.width=5, fig.height=3, fig.cap="Percent of trend around the trend line for Average Length of Stay", results='asis', echo=FALSE}
 
-ggplot(tfxr[-15,], aes(x=Year, y=perTrend)) + geom_point() + geom_line(aes(y=`perTrend`)) + xlab("Year") + ylab("Percent of trend") + theme_light() + theme(legend.position="top", text = element_text(size=8)) + stat_function(fun = function(x) {x = 100}, linetype="dashed") + scale_y_continuous(breaks=seq(80, 140, by=20))
+ggplot(als[-15,], aes(x=Year, y=perTrend)) + geom_point() + geom_line(aes(y=`perTrend`)) + xlab("Year") + ylab("Percent of trend") + theme_light() + theme(legend.position="top", text = element_text(size=8)) + stat_function(fun = function(x) {x = 100}, linetype="dashed") + scale_y_continuous(breaks=seq(80, 140, by=20))
 ```
 
  
@@ -654,7 +654,7 @@ ggplot(tfxr[-15,], aes(x=Year, y=perTrend)) + geom_point() + geom_line(aes(y=`pe
 prediction <- data.frame(cbind(c(2016,2017,2018), c(p2016, p2017, p2018)))
 colnames(prediction) <- c('Year', 'Average Length of Stay')
 
-ggplot(tfxr[-15,], aes(x=Year, y=`Average Length of Stay`)) + geom_point(shape=23) + geom_line(aes(y=`Average Length of Stay`), color="#555555") + xlab("Year") + ylab("Average Length of Stay \n (in Days)") + theme_light() + theme(legend.position="top", text = element_text(size=8))  + stat_function(fun = function(x) {b_0 + b_1 * 2 * (x - 2001 - x_bar)}, size=1) + scale_y_continuous(labels = function(x)x/1000) + geom_smooth(method = "lm", color="black", se=FALSE) + geom_point(data = prediction, size=2, aes(shape = factor(Year, labels = c(paste("2016 : ", p2016, "days "), paste("2017 : ", p2017, "days "), paste("2018 : ", p2018, "days "))))) + labs(shape="")
+ggplot(als[-15,], aes(x=Year, y=`Average Length of Stay`)) + geom_point(shape=23) + geom_line(aes(y=`Average Length of Stay`), color="#555555") + xlab("Year") + ylab("Average Length of Stay \n (in Days)") + theme_light() + theme(legend.position="top", text = element_text(size=8))  + stat_function(fun = function(x) {b_0 + b_1 * 2 * (x - 2001 - x_bar)}, size=1) + scale_y_continuous(labels = function(x)x/1000) + geom_smooth(method = "lm", color="black", se=FALSE) + geom_point(data = prediction, size=2, aes(shape = factor(Year, labels = c(paste("2016 : ", p2016, "days "), paste("2017 : ", p2017, "days "), paste("2018 : ", p2018, "days "))))) + labs(shape="")
 ```
 
 
@@ -665,17 +665,17 @@ ggplot(tfxr[-15,], aes(x=Year, y=`Average Length of Stay`)) + geom_point(shape=2
 
 x <- 2*(row_vec-x_bar)
 xY <- x * nepal_tourism[,6]
-tfxr <- cbind(row_vec, nepal_tourism[,c(1,6)], x, xY, x^2)
-tfxr <- rbind(tfxr, colSums(tfxr))
-#xtable(tfxr)
-kable(tfxr, col.names = c("SN.", "Year ($X$)", "TDCE ($Y$)", "$x = 2(X - \\overline{X})$", "$xY$", "$x^2$"))
+tdce <- cbind(row_vec, nepal_tourism[,c(1,6)], x, xY, x^2)
+tdce <- rbind(tdce, colSums(tdce))
+#xtable(tdce)
+kable(tdce, col.names = c("SN.", "Year ($X$)", "TDCE ($Y$)", "$x = 2(X - \\overline{X})$", "$xY$", "$x^2$"))
 
 ```
 
 
 ```{r, fig.width=5, fig.height=3, fig.cap="Travel & Tourism Direct Contribution to Employment augmented with LOESS regression curve with 95% confidence interval range", results='asis', echo=FALSE}
 
-ggplot(tfxr[-15,], aes(x=Year, y=`Travel & Tourism Direct Contribution to Employment`)) + geom_point() + geom_line(aes(y=`Travel & Tourism Direct Contribution to Employment`)) + xlab("Year") + ylab("Travel & Tourism Direct Contribution to Employment \n (in Thousands)") + theme_light() + theme(legend.position="top", text = element_text(size=8)) + stat_smooth()  + scale_y_continuous(labels = function(x)x/1000)
+ggplot(tdce[-15,], aes(x=Year, y=`Travel & Tourism Direct Contribution to Employment`)) + geom_point() + geom_line(aes(y=`Travel & Tourism Direct Contribution to Employment`)) + xlab("Year") + ylab("Travel & Tourism Direct Contribution to Employment \n (in Thousands)") + theme_light() + theme(legend.position="top", text = element_text(size=8)) + stat_smooth()  + scale_y_continuous(labels = function(x)x/1000)
 ```
 
 ## Trend Line
@@ -687,19 +687,19 @@ ggplot(tfxr[-15,], aes(x=Year, y=`Travel & Tourism Direct Contribution to Employ
     $\widehat{Y} = b_0 + b_1X$  
       where   
     ```{r, echo=FALSE}
-    b_1 <- tfxr[15,5]/tfxr[15,6]
-    b_0 <- tfxr[15,3]/n
+    b_1 <- tdce[15,5]/tdce[15,6]
+    b_0 <- tdce[15,3]/n
     ```
-      $b_1 = \frac{\sum xY}{\sum x^2}$ = $\frac{`r tfxr[15,5]`}{`r tfxr[15,6]`}$ = `r b_1`
+      $b_1 = \frac{\sum xY}{\sum x^2}$ = $\frac{`r tdce[15,5]`}{`r tdce[15,6]`}$ = `r b_1`
       
-      $b_0 = \frac{\sum Y}{n}$ = $\frac{`r tfxr[15,3]`}{`r n`}$ = `r b_0`  
+      $b_0 = \frac{\sum Y}{n}$ = $\frac{`r tdce[15,3]`}{`r n`}$ = `r b_0`  
       
       
     So, $\widehat{Y} = b_0 + b_1X = `r b_0` + `r b_1`x$
   
 ```{r, fig.width=5, fig.height=3, fig.cap="Linear trend line of Travel & Tourism Direct Contribution to Employment with 95% confidence interval range" , results='asis', echo=FALSE}
 
-ggplot(tfxr[-15,], aes(x=Year, y=`Travel & Tourism Direct Contribution to Employment`)) + geom_point() + geom_line(aes(y=`Travel & Tourism Direct Contribution to Employment`), color="#555555") + xlab("Year") + ylab("Travel & Tourism Direct Contribution to Employment \n (in Thousands)") + theme_light() + theme(legend.position="top", text = element_text(size=8)) + stat_function(fun = function(x) {b_0 + b_1 * 2 * (x - 2001 - x_bar)}, size=1) + scale_y_continuous(labels = function(x)x/1000) + geom_smooth(method = "lm", color="black")
+ggplot(tdce[-15,], aes(x=Year, y=`Travel & Tourism Direct Contribution to Employment`)) + geom_point() + geom_line(aes(y=`Travel & Tourism Direct Contribution to Employment`), color="#555555") + xlab("Year") + ylab("Travel & Tourism Direct Contribution to Employment \n (in Thousands)") + theme_light() + theme(legend.position="top", text = element_text(size=8)) + stat_function(fun = function(x) {b_0 + b_1 * 2 * (x - 2001 - x_bar)}, size=1) + scale_y_continuous(labels = function(x)x/1000) + geom_smooth(method = "lm", color="black")
 ```
 
 ## Cyclical Variation 
@@ -725,11 +725,11 @@ ggplot(tfxr[-15,], aes(x=Year, y=`Travel & Tourism Direct Contribution to Employ
     baseline = 0
     
 ```{r, echo=FALSE}
-y_hat <- b_0 + b_1 * tfxr[1:14, 4]
-perTrend <- tfxr[1:14,3] / y_hat * 100
-relCyc <- (tfxr[1:14,3] - y_hat) / y_hat * 100
-tfxr <- cbind(tfxr[1:14, c(2, 3, 4)], y_hat, perTrend, relCyc)
-kable(tfxr, col.names = c("Year ($X$)", "TDCE ($Y$)", "$x$", "$\\widehat{Y}$", "$\\frac{Y}{\\widehat{Y}} \\times 100$", "$\\frac{Y - \\widehat{Y}}{\\widehat{Y}} \\times 100$"))
+y_hat <- b_0 + b_1 * tdce[1:14, 4]
+perTrend <- tdce[1:14,3] / y_hat * 100
+relCyc <- (tdce[1:14,3] - y_hat) / y_hat * 100
+tdce <- cbind(tdce[1:14, c(2, 3, 4)], y_hat, perTrend, relCyc)
+kable(tdce, col.names = c("Year ($X$)", "TDCE ($Y$)", "$x$", "$\\widehat{Y}$", "$\\frac{Y}{\\widehat{Y}} \\times 100$", "$\\frac{Y - \\widehat{Y}}{\\widehat{Y}} \\times 100$"))
 
 ```
 
@@ -738,7 +738,7 @@ For both measure of variaton, the highest fluctuation occured in the year 2004 w
 
 ```{r, fig.width=5, fig.height=3, fig.cap="Percent of trend around the trend line for Travel & Tourism Direct Contribution to Employment", results='asis', echo=FALSE}
 
-ggplot(tfxr[-15,], aes(x=Year, y=perTrend)) + geom_point() + geom_line(aes(y=`perTrend`)) + xlab("Year") + ylab("Percent of trend") + theme_light() + theme(legend.position="top", text = element_text(size=8)) + stat_function(fun = function(x) {x = 100}, linetype="dashed") + scale_y_continuous(breaks=seq(60, 140, by=20))
+ggplot(tdce[-15,], aes(x=Year, y=perTrend)) + geom_point() + geom_line(aes(y=`perTrend`)) + xlab("Year") + ylab("Percent of trend") + theme_light() + theme(legend.position="top", text = element_text(size=8)) + stat_function(fun = function(x) {x = 100}, linetype="dashed") + scale_y_continuous(breaks=seq(60, 140, by=20))
 ```
 
   
@@ -780,12 +780,12 @@ ggplot(tfxr[-15,], aes(x=Year, y=perTrend)) + geom_point() + geom_line(aes(y=`pe
 prediction <- data.frame(cbind(c(2016,2017,2018), c(p2016, p2017, p2018)))
 colnames(prediction) <- c('Year', 'Travel & Tourism Direct Contribution to Employment')
 
-ggplot(tfxr[-15,], aes(x=Year, y=`Travel & Tourism Direct Contribution to Employment`)) + geom_point(shape=23) + geom_line(aes(y=`Travel & Tourism Direct Contribution to Employment`), color="#555555") + xlab("Year") + ylab("Travel & Tourism Direct Contribution to Employment \n (in Thousands)") + theme_light() + theme(legend.position="top", text = element_text(size=8))  + stat_function(fun = function(x) {b_0 + b_1 * 2 * (x - 2001 - x_bar)}, size=1) + scale_y_continuous(labels = function(x)x/1000) + geom_smooth(method = "lm", color="black", se=FALSE) + geom_point(data = prediction, size=2, aes(shape = factor(Year, labels = c(paste("2016 : ", p2016), paste("2017 : ", p2017), paste("2018 : ", p2018))))) + labs(shape="")
+ggplot(tdce[-15,], aes(x=Year, y=`Travel & Tourism Direct Contribution to Employment`)) + geom_point(shape=23) + geom_line(aes(y=`Travel & Tourism Direct Contribution to Employment`), color="#555555") + xlab("Year") + ylab("Travel & Tourism Direct Contribution to Employment \n (in Thousands)") + theme_light() + theme(legend.position="top", text = element_text(size=8))  + stat_function(fun = function(x) {b_0 + b_1 * 2 * (x - 2001 - x_bar)}, size=1) + scale_y_continuous(labels = function(x)x/1000) + geom_smooth(method = "lm", color="black", se=FALSE) + geom_point(data = prediction, size=2, aes(shape = factor(Year, labels = c(paste("2016 : ", p2016), paste("2017 : ", p2017), paste("2018 : ", p2018))))) + labs(shape="")
 ```
 
 
 ```{r echo=FALSE}
-kable(nepal_tourism, col.names = c("Year", "TFXR", "Tourist Arrival", "GFXE", "ALS", "TDCE"))
+kable(nepal_tourism, col.names = c("Year", "tdce", "Tourist Arrival", "GFXE", "ALS", "TDCE"))
 ```
 
 # Citation
